--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,13 +40,15 @@
         <activity android:name=".activities.MoveToActivity" />
         <activity android:name=".activities.NoteDetailActivity" />
         <activity android:name=".activities.NotesListActivity" />
-        <activity android:name=".activities.SplashScreenActivity"></activity>
-        <activity android:name=".activities.CategoryListActivity">
+        <activity android:name=".activities.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.CategoryListActivity">
+
         </activity>
 
         <meta-data
